# fastapi-template

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
tests/: test_app.py
