[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "A template to FastAPI projects"
authors = ["carvalhocaio <caiocarvalho.py@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"
blue = "^0.9.1"
ruff = "^0.2.1"
httpx = "^0.26.0"
isort = "^5.13.2"
pylint = "^3.0.3"
ignr = "^2.2"

[tool.ruff]
line-length = 79
exclude = ['.venv']

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
pylint = 'pylint src/ tests/'
lint = 'ruff . && blue --check . --diff && isort --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn src.app:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
